--- a/css/index.css
+++ b/css/index.css
@@ -34,14 +34,14 @@ header {
     justify-content: end;
 }
 
-.menu-horizontal>li>a {
+.menu-horizontal > li > a {
     display: block;
     padding: 15px 20px;
     color: white;
     text-decoration: none;
 }
 
-.menu-horizontal>li:hover {
+.menu-horizontal > li:hover {
     background-color: #4FC3F7;
 }
 
@@ -93,9 +93,9 @@ header {
 
 main {
     width: 100%;
-    padding-left: 50px;
+    /* padding-left: 50px;
     padding-right: 50px;
-    margin-top: 50px;
+    margin-top: 50px; */
 }
 
 /*SOBRE NOSOTROS */
@@ -224,10 +224,25 @@ footer section div {
 }
 
 .formularios {
+    margin-top: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-weight: bold;
+    padding: 10px;
+}
+
+.formularios .title{
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.formulario {
+    width: 50%;
+    max-width: 500px;
+    -webkit-box-shadow: 0px 3px 5px 3px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 3px 5px 3px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 3px 5px 3px rgba(0, 0, 0, 0.75);
 }
 
 .formularios .form-group {
@@ -335,15 +350,17 @@ table tr:nth-child(even) {
 }
 
 .galeria {
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
 }
 
 .galeria article {
     width: 28%;
     height: 500px;
-    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .galeria article img {
@@ -354,18 +371,41 @@ table tr:nth-child(even) {
     background-repeat: no-repeat;
 }
 
-.mensajesError{
+.mensajesError {
+    width: 90%;
+    margin: auto;
+    margin-bottom: 10px;
     display: none;
-    background-color:#EC407A ;
+    background-color: #EC407A;
     color: white;
     border-radius: 5px;
     padding: 8px;
 }
 
-.mensajesExito{
+.mensajesExito {
+    width: 90%;
+    margin: auto;
+    margin-bottom: 10px;
     display: none;
-    background-color:#00C853 ;
+    background-color: #00C853;
     color: white;
     border-radius: 5px;
     padding: 8px;
+}
+
+.footerContactos {
+    position: absolute;
+    bottom: 0;
+    background-color: #29B6F6;
+    width: 100%;
+}
+
+@media (max-width:1020px) {
+
+    .galeria article {
+        width: 40%;
+        height: 500px;
+        margin: 10px;
+    }
+
 }
